menu: fix icon vertical alignment

--- a/components/core/menu/style.scss
+++ b/components/core/menu/style.scss
@@ -208,6 +208,6 @@ $checkbox-icon-offset-x: dp(6.04);
   align-self: flex-end;
   padding-bottom: dp(20);
   &.material-icons {
-    padding-bottom: dp(16);
+    padding-bottom: dp(14);
   }
 }
